# lemac

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  lemacConfig.cmake.in  lemacsum.1  vcpkg.json
.github/workflows/: build-debs.yml  cross-to-windows.yml  fetchcontent.yml  macos.yml  sanitizers.yml  ubuntu-aarch64.yml  ubuntu-emulated-aarch64.yml  ubuntu-install.yml  ubuntu-native-aarch64.yml  ubuntu.yml  windows-amd64.yml  windows-arm64.yml
benchmark/: CMakeLists.txt  benchmark.cpp
debian/: .gitignore  changelog  control  lemac.install  lemac.manpages  liblemac-dev.install  liblemac0.install  rules
doc/: performance.ods
examples/use_with_cmake_install/: CMakeLists.txt
examples/use_with_explicit_filename/: CMakeLists.txt
examples/use_with_fetchcontent/: CMakeLists.txt  main.cpp
examples/use_with_findpackage/: CMakeLists.txt
include/: lemac.h
scripts/: clang_format.sh  cmake_format.sh  cross_compile_to_windows.sh  shell_format.sh
src/: arm64_capabilities.cpp  arm64_capabilities.h  impl_interface.h  lemac.c  lemac.cpp  lemac.h  lemac_aesni.cpp  lemac_aesni.h  lemac_aesni_128.cpp  lemac_aesni_full.cpp  lemac_aesni_impl.h  lemac_aesni_plain.cpp  lemac_aesni_vaes.cpp  lemac_arm64.h  lemac_arm64_impl.h  lemac_arm64_plain.cpp  lemac_arm64_v8A.cpp  lemac_arm64_v8A.h  lemac_arm64_vaes.cpp  main.cpp  x86_capabilities.cpp  x86_capabilities.h
test/: CMakeLists.txt  generate_one_byte_files.py  one_byte_files.lemacsum  test_tool.sh  tests.cpp
